--- a/common-api/pom.xml
+++ b/common-api/pom.xml
@@ -236,6 +236,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.49</version>
+        </dependency>
+
+
     </dependencies>
 
     <repositories>
