--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>gatway-api</module><!--网关-->
         <module>config-api</module><!--配置中心-->
         <module>common-api</module>
+        <module>member-api</module>
 
     </modules>
 
@@ -72,6 +73,10 @@
     </repositories>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
